--- a/viewer02.html
+++ b/viewer02.html
@@ -53,12 +53,52 @@
     .controls button{flex:0 0 auto; width:auto; display:inline-block;}
 
     /* Zone graphe */
-    .graph-wrapper{display:flex;align-items:center;justify-content:center;gap:20px;margin-bottom:40px;}
-    .graph-side{display:flex;flex-direction:column;gap:10px;}
-    #myChart{
-      width:100%; aspect-ratio:16/9; max-height:800px; background:#fff;
-      border-radius:8px; box-shadow:0 4px 12px var(--shadow); display:block; margin:0 auto;
-    }
+.graph-wrapper {
+  display: flex;
+  align-items: stretch;   /* le canvas prend toute la hauteur */
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 40px;
+  height: 1000px;          /* hauteur fixée comme le canvas */
+}
+
+.graph-side {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* centre verticalement si le menu est plus petit */
+}
+
+#myChart {
+  width: 100%;
+  aspect-ratio: 16/9;
+  max-height: 1000px;
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px var(--shadow);
+  display: block;
+  margin: 0 auto;
+}
+
+.y-columns {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+
+  /* hauteur adaptative */
+  max-height: 1000px;      /* ne jamais dépasser 1000px */
+  height: auto;            /* prend la taille du contenu si < 1000px */
+
+  overflow-y: auto;        /* ajoute une barre de défilement si trop long */
+  border: 1px solid #ddd;
+  padding: 6px;
+  border-radius: 6px;
+  background: var(--panel);
+  scrollbar-width: thin;
+  width: 220px;
+}
+
+
+
 
     /* Infos & états */
     #zoomInfo{
@@ -102,11 +142,24 @@
 
     /* Sélecteurs colonnes */
     @media (max-width:600px){#myChart{width:100%;}}
+.y-columns {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
 
-    .y-columns{
-      display:flex; flex-direction:column; gap:4px;
-      max-height:8.5em; overflow-y:auto; border:1px solid #ddd; padding:6px; border-radius:6px;
-      background:var(--panel); scrollbar-width:thin; margin:0 auto; width:220px;
+  /* hauteur auto sauf si trop long */
+  height: auto;            /* s'adapte au contenu */
+  max-height: 1000px;      /* plafonné à 1000px si trop grand */
+  overflow-y: auto;        /* active le scroll uniquement si nécessaire */
+
+  border: 1px solid #ddd;
+  padding: 6px;
+  border-radius: 6px;
+  background: var(--panel);
+  scrollbar-width: thin;
+  width: 220px;
+}
+
     }
     .y-columns::-webkit-scrollbar{width:6px;}
     .y-columns::-webkit-scrollbar-thumb{background:var(--accent);border-radius:4px;}
@@ -120,6 +173,25 @@
 
     /* Petite mise au point pour le conteneur des sélecteurs */
     #columnSelectors{align-items:center;}
+
+/* 🔒 Masquer les boutons "avant/après" et "étendre" */
+#extendPrev,
+#extendNext,
+#panPrev,
+#panNext {
+  display: none !important;
+}
+
+/* Positionnement du bloc à gauche du graphe */
+.graph-side {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* centre verticalement */
+  align-items: center;     /* centre horizontalement */
+}
+
+
+
   </style>
 </head>
 <body>
@@ -148,27 +220,25 @@
       <button id="drawChartBtn" style="display:none;">📊 Afficher courbes</button>
     </div>
     <!-- Cases à cocher pour les colonnes Y -->
+    
+  </div>
+
+<!-- === PARTIE 6 : Zone Graphique === -->
+<div class="graph-wrapper">
+  <!-- Côté gauche : menu Y -->
+  <div class="graph-side">
     <div id="yColumnsContainer" class="y-columns"></div>
   </div>
 
-  <!-- === PARTIE 6 : Zone Graphique === -->
-  <div class="graph-wrapper">
-    <div class="graph-side">
-      <button id="extendPrev">⬅️ Étendre veille</button>
-      <button id="panPrev">⏪ Avant</button>
-    </div>
-
-    <div style="flex:1; display:flex; flex-direction:column; align-items:center;">
-      <canvas id="myChart" width="1600" height="800"></canvas>
-      <input type="color" id="colorPicker" style="display:none;" />
-      <div id="dateLabels" style="text-align:center; margin-top:8px; font-weight:bold; color:var(--danger);"></div>
-    </div>
-
-    <div class="graph-side">
-      <button id="extendNext">Étendre lendemain ➡️</button>
-      <button id="panNext">⏩ Après</button>
-    </div>
+  <!-- Zone centrale : graphe -->
+  <div style="flex:1; display:flex; flex-direction:column; align-items:center;">
+    <canvas id="myChart" width="1400" height="1000"></canvas>
+    <input type="color" id="colorPicker" style="display:none;" />
+    <div id="dateLabels" style="text-align:center; margin-top:8px; font-weight:bold; color:var(--danger);"></div>
   </div>
+</div>
+
+
 
   <!-- === PARTIE 7 : Aides/états === -->
   <div id="zoomInfo">🔍 Sélectionner une zone (drag) pour zoomer, molette+Ctrl pour zoom, Ctrl+clic sur la courbe pour changer sa couleur</div>
@@ -208,6 +278,8 @@
   let colors=[]; let themeMenuTimer;
   let loadedDays=new Set(); let saMeta=null;
   let customColors = {}; // mémorise les couleurs choisies par label
+  let initialMin = null, initialMax = null;
+
 
 
   // Z3
@@ -633,6 +705,10 @@ if (!isNaN(dt.getTime())) {
   const allX=csvData.map(r=>r.__sortKey).filter(v=>Number.isFinite(v));
   const minX=Math.min(...allX), maxX=Math.max(...allX);
 
+  // stocker les bornes initiales une seule fois
+  if (initialMin === null) initialMin = minX;
+  if (initialMax === null) initialMax = maxX;
+
   const datasets = buildDatasets();
 
   // Sauvegarder zoom avant destruction
@@ -681,14 +757,19 @@ if (!isNaN(dt.getTime())) {
           zoom:{
             wheel:{enabled:true,modifierKey:'ctrl'},
             pinch:{enabled:true},
-            drag:{enabled:true,mode:'x'},
-            mode:'x'
+            drag:{
+              enabled:true,
+              mode:'x',
+              backgroundColor:'rgba(54, 162, 235, 0.1)', // fond semi-transparent
+              borderColor:'rgba(54, 162, 235, 0.5)',     // contour visible
+              borderWidth:1
+            }
           },
           pan:{enabled:true,mode:'x'},
           limits:{ y:{min:'original',max:'original'} }
         }
       },
-      tooltip:{   // au bon niveau
+      tooltip:{
         callbacks:{
           title:(items)=>{
             if(!items?.length) return '';
@@ -755,6 +836,7 @@ if (!isNaN(dt.getTime())) {
 
 
 
+
   /* ===================== UI ===================== */
   document.getElementById('backBtn').onclick=()=>window.close();
 
@@ -792,14 +874,23 @@ ds.pointBorderColor = newColor;
     colorPickerEl.click();
   });
 
-  // Reset zoom
-  document.getElementById('resetZoom').onclick=()=>{
-    if(!chart) return;
-    chart.resetZoom();
-    chart.options.scales.x.min=undefined;
-    chart.options.scales.x.max=undefined;
-    applyAdaptiveTicks();
-  };
+// Reset zoom
+document.getElementById('resetZoom').onclick=()=>{
+  if(!chart) return;
+
+  // Empêcher autoLoadDays de s’exécuter pendant le reset
+  chart.$isResetting = true;
+
+  chart.resetZoom();
+  chart.options.scales.x.min = initialMin;
+  chart.options.scales.x.max = initialMax;
+  applyAdaptiveTicks();
+  chart.update('none');
+
+  // Réactiver autoLoadDays après un petit délai
+  setTimeout(()=>{ chart.$isResetting = false; }, 200);
+};
+
 
   // ==== LISSAGE avec mémorisation ====
   function updateSmoothBtnUI() {
@@ -935,8 +1026,6 @@ async function loadDayIfAvailable(yyyymmdd){
     }
   }
 
-  document.getElementById('panPrev').onclick = ()=> panAndLoad(-1);
-  document.getElementById('panNext').onclick = ()=> panAndLoad(+1);
 
   async function extendDays(direction,days){
     if(!saMeta) return;
@@ -963,25 +1052,23 @@ async function loadDayIfAvailable(yyyymmdd){
     document.getElementById('dayModal').style.display='none';
     if(modalResolve){modalResolve(isNaN(n)?null:{n,dir:modalDirection}); modalResolve=null;}
   };
-  document.getElementById('extendPrev').onclick=async()=>{ const res=await openDayModal(1,-1); if(res&&res.n>0) extendDays(-1,res.n); };
-  document.getElementById('extendNext').onclick=async()=>{ const res=await openDayModal(1,+1); if(res&&res.n>0) extendDays(+1,res.n); };
+
 
 /* ===================== AUTO LOAD DAYS (zoom/pan) ===================== */
 async function autoLoadDays(chart){
+  // 🚫 si on est en train de faire un reset → on sort direct
+  if(chart.$isResetting) return;
   if(!saMeta) return;
+
   const xScale = chart.scales.x;
   const min = xScale.min, max = xScale.max;
 
   const d0 = new Date(min);
   const d1 = new Date(max);
 
-  // Mise à zéro heure
+  // Mise à zéro heure (⚠️ pas de limite veille/lendemain)
   d0.setHours(0,0,0,0);
   d1.setHours(0,0,0,0);
-
-  // 🔥 inclure la veille et le lendemain
-  d0.setDate(d0.getDate()-1);
-  d1.setDate(d1.getDate()+1);
 
   let newData = false;
 
@@ -1013,6 +1100,7 @@ async function autoLoadDays(chart){
     if(z3Visible && chart) chart.update('none');
   }
 }
+
 
 
   /* ===================== EXPORT PDF ===================== */
@@ -1124,5 +1212,8 @@ async function autoLoadDays(chart){
   </script>
 </body>
 </html>
+
+
+
 
 
