--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ const API_KEY="AIzaSyCbEV3CS9bOcxq5eK-QXbjczGHjvzyXS6M";
 const ROOT_FOLDER_ID="18QkQPyCZxTCAaoz_qd1wAelmQbSE4ex8";
 
 /* ----------- Config personnalisée ----------- */
-const FLAME_THRESHOLD = 40.0;   // seuil déclencheur de la flamme 🔥
+const FLAME_THRESHOLD = 50.0;   // seuil déclencheur de la flamme 🔥
 
 /* ----------- État ----------- */
 let imageFiles=[], currentImageIndex=0;
@@ -804,15 +804,15 @@ async function checkTraçaTempToday(parentLi, tracatempId) {
 
 function markFolderWithFlame(li) {
   const span = li.querySelector(".folder-name");
-  // ✅ Vérifie s'il y a déjà une flamme (évite les doublons)
-  if (span && !span.querySelector(".flame")) {
+  if (span && !span.classList.contains("has-flame")) {
+    span.classList.add("has-flame");
     span.innerHTML = `<span class="flame">🔥</span> ` + span.innerHTML;
   }
-  // ✅ Propagation aux parents
   if (li.parentElement && li.parentElement.closest("li")) {
     markFolderWithFlame(li.parentElement.closest("li"));
   }
 }
+
 
 
 /* ----------- Init ----------- */
@@ -834,6 +834,23 @@ window.onload=()=>{
 </script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
