--- a/index.html
+++ b/index.html
@@ -199,9 +199,12 @@ tbody tr:hover .action-btn{opacity:1;visibility:visible;}
 }
 
 @keyframes flicker {
-  from { transform: translateY(0); }
-  to   { transform: translateY(-2px); }
+  0%   { transform: translateY(0) scale(1); color: #ff7043; }
+  30%  { transform: translateY(-1px) scale(1.05); color: #ff5722; }
+  60%  { transform: translateY(-2px) scale(1.1); color: #ff9800; }
+  100% { transform: translateY(0) scale(1); color: #ff7043; }
 }
+
 
 </style>
 </head>
